# mermaid

./: .gitignore  README.md  package.json
.github/workflows/: publish.yml
mermaid/Documentation/Classes/: _mermaid_Controller.md  mermaid.md
mermaid/Project/Sources/: catalog.4DCatalog  settings.4DSettings
mermaid/Project/Sources/Classes/: _mermaid_Controller.4dm  mermaid.4dm  server.4dm
mermaid/Project/Sources/Methods/: TEST_mermaid.4dm
rust/mermaid/: Cargo.toml
rust/mermaid/payload/: index.html
rust/mermaid/src/: main.rs
